Make sure the form fields in the reply form are always placed under the field labels; Fix CSS overflow bug that occurs with the new Plone 4.0b5 comment styles
svn path=/plone.app.discussion/trunk/; revision=37774

--- a/plone/app/discussion/browser/stylesheets/discussion.css
+++ b/plone/app/discussion/browser/stylesheets/discussion.css
@@ -18,7 +18,6 @@
 
 .comment {
     min-height: 100px;
-    overflow: auto;
 }
 
 .commentImage {
@@ -58,6 +57,13 @@
 .reply fieldset {
     /* Fix bouncing fieldset when reply form is shown. */
     margin: 0 !important;
+}
+
+.reply .text-widget {
+	/* Make sure the input fields are always below the label. This sometimes
+	 * break when the reply form is copied from the main comment form. 
+	 */
+	display: block;
 }
 
 .reply-to-comment-button {
